Border patch serialization parallel using Scheduler