@@ -1,5 +1,8 @@
 package pl.edu.agh.hiputs.service.worker;
 
+import static java.util.stream.Collectors.mapping;
+import static java.util.stream.Collectors.toList;
+
 import java.io.IOException;
 import java.util.Collection;
 import java.util.Collections;
@@ -7,28 +10,32 @@ import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.Callable;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 import javax.annotation.PostConstruct;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.apache.commons.lang3.SerializationUtils;
 import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.apache.commons.lang3.tuple.Pair;
 import org.springframework.stereotype.Service;
 import pl.edu.agh.hiputs.communication.Subscriber;
 import pl.edu.agh.hiputs.communication.model.MessagesTypeEnum;
 import pl.edu.agh.hiputs.communication.model.messages.BorderSynchronizationMessage;
 import pl.edu.agh.hiputs.communication.model.messages.Message;
-import pl.edu.agh.hiputs.communication.model.serializable.SerializedLane;
 import pl.edu.agh.hiputs.communication.service.worker.MessageSenderService;
 import pl.edu.agh.hiputs.communication.service.worker.WorkerSubscriptionService;
+import pl.edu.agh.hiputs.model.id.LaneId;
 import pl.edu.agh.hiputs.model.id.MapFragmentId;
 import pl.edu.agh.hiputs.model.id.PatchId;
 import pl.edu.agh.hiputs.model.map.mapfragment.TransferDataHandler;
 import pl.edu.agh.hiputs.model.map.patch.Patch;
 import pl.edu.agh.hiputs.scheduler.TaskExecutorService;
+import pl.edu.agh.hiputs.scheduler.task.LaneSerializationTask;
 import pl.edu.agh.hiputs.scheduler.task.SynchronizeShadowPatchState;
 import pl.edu.agh.hiputs.service.worker.usecase.CarsOnBorderSynchronizationService;
+import pl.edu.agh.hiputs.statistics.SimulationPoint;
+import pl.edu.agh.hiputs.statistics.worker.IterationStatisticsService;
 import pl.edu.agh.hiputs.utils.DebugUtils;
 
 @Slf4j
@@ -37,13 +44,12 @@ import pl.edu.agh.hiputs.utils.DebugUtils;
 public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynchronizationService, Subscriber {
 
   private final WorkerSubscriptionService subscriptionService;
-
   private final TaskExecutorService taskExecutorService;
-
   private final MessageSenderService messageSenderService;
   private final List<BorderSynchronizationMessage> incomingMessages = Collections.synchronizedList(new LinkedList<>());
-  private final List<BorderSynchronizationMessage> futureIncomingMessages = Collections.synchronizedList(new LinkedList<>());
-
+  private final List<BorderSynchronizationMessage> futureIncomingMessages =
+      Collections.synchronizedList(new LinkedList<>());
+  private final IterationStatisticsService iterationStatisticsService;
   private final AtomicInteger simulationStepNo = new AtomicInteger(0);
 
   @PostConstruct
@@ -54,29 +60,37 @@ public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynch
   @Override
   public void sendCarsOnBorderToNeighbours(TransferDataHandler mapFragment) {
     log.info("Step 9-0-1");
-    Set<Patch> distinctBorderPatches = mapFragment.getBorderPatches()
-        .values()
-        .stream()
+    iterationStatisticsService.startStage(SimulationPoint.PATCHES_SERIALIZATION);
+    Set<Patch> distinctBorderPatches =
+        mapFragment.getBorderPatches().values().stream().flatMap(Collection::stream).collect(Collectors.toSet());
+
+    List<Callable<?>> serializedBorderPatchesTasks = distinctBorderPatches.stream()
+        .map(patch -> patch.parallelStreamLanesEditable().map(LaneSerializationTask::new).collect(Collectors.toList()))
         .flatMap(Collection::stream)
-        .collect(Collectors.toSet());
-    log.info("Step 9-0-2");
-    Map<PatchId, List<byte[]>> serializedBorderPatches = distinctBorderPatches
-        .parallelStream()
-        .map(p -> new ImmutablePair<PatchId, List<byte[]>>(p.getPatchId(), p.parallelStreamLanesEditable()
-            .map(SerializedLane::new)
-            .map(SerializationUtils::serialize)
-            .toList()))
-        .collect(Collectors.toMap(ImmutablePair::getLeft, ImmutablePair::getRight));
-    log.info("Step 9-0-3");
+        .collect(Collectors.toList());
+
+    // log.info("Step 9-0-3");
+    List<Pair<LaneId, byte[]>> serializedBorderLines =
+        (List<Pair<LaneId, byte[]>>) taskExecutorService.executeCallableBatch(serializedBorderPatchesTasks);
+    Map<PatchId, List<byte[]>> serializedBorderPatches = serializedBorderLines.stream()
+        .collect(Collectors.groupingBy(pair -> mapFragment.getPatchIdByLaneId(pair.getLeft()),
+            mapping(Pair::getRight, toList())));
+
     Map<MapFragmentId, BorderSynchronizationMessage> messages = mapFragment.getBorderPatches()
         .entrySet()
         .parallelStream()
         .map(entry -> new ImmutablePair<>(entry.getKey(), createMessageFrom(entry.getValue(), serializedBorderPatches)))
-        .collect(Collectors.toMap(ImmutablePair::getLeft, ImmutablePair::getRight));
-    log.info("Step 9-0-4");
-    long start = System.currentTimeMillis();
+        .collect(Collectors.toConcurrentMap(ImmutablePair::getLeft, ImmutablePair::getRight));
+
+    log.info("Step 9-0-2");
+    iterationStatisticsService.endStage(SimulationPoint.PATCHES_SERIALIZATION);
+    iterationStatisticsService.startStage(SimulationPoint.PATCHES_SENDING);
+    // long time3 = System.currentTimeMillis();
     sendMessages(messages);
-    log.info("Step 9-0-4 time = {}", System.currentTimeMillis() - start);
+
+    iterationStatisticsService.endStage(SimulationPoint.PATCHES_SENDING);
+    // long time4 = System.currentTimeMillis();
+    // log.info("Step 9 times: {}, {}; {}; {};", time1-time0,time2-time1, time3-time2, time4-time3);
   }
 
   @Override
@@ -103,7 +117,7 @@ public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynch
   private int applyMessages(TransferDataHandler mapFragment, int readedMessage) {
     List<Runnable> synchronizeShadowPatchesStateTasks = incomingMessages.subList(readedMessage, incomingMessages.size())
         .parallelStream()
-        .flatMap(message -> message.getPatchContent().entrySet().parallelStream())
+        .flatMap(message -> message.getPatchContent().entrySet().stream())
         .map(e -> new SynchronizeShadowPatchState(e.getKey(), e.getValue(), mapFragment))
         .collect(Collectors.toList());
 
@@ -164,8 +178,7 @@ public class CarsOnBorderSynchronizationServiceImpl implements CarsOnBorderSynch
 
   private BorderSynchronizationMessage createMessageFrom(Set<Patch> patches,
       Map<PatchId, List<byte[]>> serializedBorderPatches) {
-    Map<String, List<byte[]>> patchContent = patches
-        .parallelStream()
+    Map<String, List<byte[]>> patchContent = patches.stream()
         .collect(Collectors.toMap(e -> e.getPatchId().getValue(),
             e -> serializedBorderPatches.get(e.getPatchId())));
     return new BorderSynchronizationMessage(simulationStepNo.get(), patchContent);
